fix: searchbar, input search fix and number validation on safari

--- a/packages/shared/styles/components/atoms/SfInput.scss
+++ b/packages/shared/styles/components/atoms/SfInput.scss
@@ -123,6 +123,9 @@
       }
       -moz-appearance: textfield;
     }
+    &[type="search"] {
+      -webkit-appearance: none;
+    }
   }
 
   &__password-button {
